# oncoscape

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: breast_downloads.template.yaml  breast_hpc.yaml  breast_sources.template.yaml  default.yaml
docs/: Makefile  make.bat
docs/source/: api.rst  architecture.rst  cli.rst  conf.py  configuration.rst  data.rst  getting-started-installation.rst  getting-started.rst  guides-hpc-layout.rst  guides.rst  index.rst  installation.rst  overview.rst  pipeline.rst  reference-config-schema.rst  reference.rst  tutorials-script-walkthrough.rst  tutorials.rst
ontology/: breast.yaml  breast_programs.yaml
scripts/: 00_fetch_and_manifest.py  00_fetch_public_data.py  00_init_hpc_project.py  00_make_public_breast_manifest.py  00_preflight.py  01_download_and_register.py  01_register_data.py  02_build_reference.py  02_build_reference_atlas.py  03_build_teachers.py  03_make_teachers.py  04_extract_patches_and_graphs.py  04_extract_tiles.py  05_train_breast_model.py  05_train_model.py  06_eval_and_render.py  07_generate_reports.py  07_run_biomarker_adapter.py  08_run_pipeline.py  09_select_best_seed.py  submit_oncoscape.slurm
scripts/cluster/: run_breast_pipeline.slurm
src/oncoscape/: __init__.py  plans.py
src/oncoscape/adapter/: __init__.py  spec.py
src/oncoscape/bootstrap/: __init__.py  project.py
src/oncoscape/cli/: __init__.py  _common.py  build_reference.py  eval_render.py  report.py  (+18 more)
tests/: test_deep_pipeline.py  test_init_project.py  test_metrics.py  test_registry_real_formats.py  test_seed_selection.py
(+42 files in other folders)
