[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoscape"
version = "0.3.0"
description = "HEST-compatible breast specialization layer for high-confidence spatial maps from H&E WSI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
