[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoscape"
version = "0.4.0"
description = "HEST-compatible breast spatial state generator and biomarker feature export layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
