[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoscape"
version = "0.4.1"
description = "HPC script set for HEST-compatible breast spatial state planning"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Dai"},
]
dependencies = [
  "PyYAML",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/dai540/oncoscape"
Repository = "https://github.com/dai540/oncoscape"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
